@@ -19,11 +19,15 @@
 
 package org.elasticsearch.ingest;
 
+import org.elasticsearch.script.DeprecationMap;
+import org.elasticsearch.script.IngestConditionalScript;
+import org.elasticsearch.script.Script;
+import org.elasticsearch.script.ScriptService;
+
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.ListIterator;
@@ -33,22 +37,10 @@ import java.util.concurrent.TimeUnit;
 import java.util.function.LongSupplier;
 import java.util.stream.Collectors;
 
-import org.elasticsearch.script.DeprecationMap;
-import org.elasticsearch.script.IngestConditionalScript;
-import org.elasticsearch.script.Script;
-import org.elasticsearch.script.ScriptService;
-
 public class ConditionalProcessor extends AbstractProcessor {
 
-    private static final Map<String, String> DEPRECATIONS;
-    static {
-        Map<String, String> deprecations = new HashMap<>();
-        deprecations.put(
-                "_type",
-                "[types removal] Looking up doc types [_type] in scripts is deprecated."
-        );
-        DEPRECATIONS = Collections.unmodifiableMap(deprecations);
-    }
+    private static final Map<String, String> DEPRECATIONS =
+            Map.of("_type", "[types removal] Looking up doc types [_type] in scripts is deprecated.");
 
     static final String TYPE = "conditional";
 
